Fix align

--- a/style.css
+++ b/style.css
@@ -126,7 +126,3 @@ p, h1 {
     padding-left: 30px;
     vertical-align: middle;
   }
-
-  .span-contact {
-    padding-left: 20px;
-  }
